# Generate openapi typescript client, use model ( for now manually )
