# src/main/resources/swagger/api.yml
@@ -9,11 +9,31 @@ servers:
     description: Development server
   - url: https://localhost:8080/api
     description: Development server with TLS Profile
-paths: {}
+paths:
+  /users/list:
+    get:
+      summary: Gets all users
+      operationId: getUsers
+      responses:
+        '200':
+          description: Successful operation
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/AccountDTO'
+
 components:
   schemas:
     AccountDTO:
+      required:
+        - login
+        - email
+        - langKey
+        - activated
       type: object
+
       properties:
         id:
           type: integer
